--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'Edit patient') %>
+<% provide(:button_text, 'Update Record') %>
 
 <h3 class='display-1'>Edit Patient Record</h3>
 
