--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'New Patient') %>
+<% provide(:button_text, 'Save New Record') %>
 
 <div class="col-sm-10 col-sm-offset-1">
 <h3 class='display-1'> New Patient's Record </h3>
