--- a/app/views/layouts/_logo.html.erb
+++ b/app/views/layouts/_logo.html.erb
@@ -1,5 +1,17 @@
     <% if logged_in? %>
-      <% logo = '<img src="/images/small_logo.png" width=30></img>' %>
+      <% logo = '<img src="/images/small_logo.png"></img>' %>
+      
+<ul class="nav navbar-nav navbar-left">
+<li class="dropdown nav-item">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-menu-hamburger text-muted"></i></a>
+<ul class="dropdown-menu">
+	<li><%= link_to "<i class='glyphicon glyphicon-user'></i> User Profile".html_safe, edit_user_path(current_user.id) %></li>
+ <li class="divider"></li>
+ <li><%= link_to "<i class='glyphicon glyphicon-log-out'></i> Logout".html_safe, logout_path, method: :delete %></li>
+</ul>
+</li>
+</ul>
+
       <%= link_to "Walk-In EMR", root_path, id: "logo" %>
     <% else %>
       <%= link_to "Stoney Creek Medical Walk-In Clinic", root_path, id: "logo" %>
