--- a/app/views/patients/_edit.html.erb
+++ b/app/views/patients/_edit.html.erb
@@ -1,11 +1,11 @@
 <%
    provide(:title, 'Edit Patient')
-   provide(:button_text, 'Save changes')
+   provide(:button_text, 'Save Changes')
 %>
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %> - Edit Patient's Record</b>
+	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %> - Edit Patient Record</b>
 </div>
 <div class="modal-body">
  <div class="well">
