Prescriptions added; meds reworked; visit list
- New model, controller and views for prescriptions
- Visit list report for patient
 -patient profile format changes; buttons factored out
- Modals for referrals, invoices, letters medications

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -711,7 +711,18 @@ card > hr {
 //	border-radius: 20px;
 }
 
+// patient profile page
 .drop-down-link {
   font-size: 1.1em;
 }
 
+.checkbox-list input[type="checkbox"] {
+  display: inline-block;
+  width: 5%;
+  vertical-align: 1px;
+}
+
+// Supress underlined legend in checkboxes in _prescription_form
+.col-form-label {
+  display: none;
+}
