--- a/app/views/patients/_referrals.html.erb
+++ b/app/views/patients/_referrals.html.erb
@@ -1,11 +1,11 @@
-<b><%= link_to "Referrals (#{@patient.referrals.size})<span class='caret'></span>".html_safe, '#', remote: :true, 'data-toggle': "collapse", 'data-target': "#referrals",  class: "drop-down-link" %> </b>
+<b><%= link_to "Referrals (#{@patient.referrals.size})<span class='caret'></span>".html_safe, '#', remote: true, 'data-toggle': "collapse", 'data-target': "#referrals",  class: "drop-down-link" %> </b>
 <div class="collapse panel panel-info" id="referrals">
   <div class="tbl patient-dropdown-panel-body">
      <table class="tbl2 table-hover table-striped table-bordered">
         <th></th><th>Date</th><th>From</th><th>To</th><th>Address</th><th></th>
         <% @patient.referrals.each do |ref| %>
         <tr>
-          <td><%= link_to "Referral #{ref.id}", referral_path(ref), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+          <td><%= link_to "Referral #{ref.id}", patient_referral_path(@patient,ref), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
           <td> <%= ref.date %> </td>
           <td> <%= ref.doctor.lname %> </td>
           <td> <%= ref.to_doctor.lname %> </td>
