--- a/app/views/vaccines/_show.html.erb
+++ b/app/views/vaccines/_show.html.erb
@@ -8,7 +8,7 @@
 	<b class="modal-title" id="myModalLabel"><%= @vaccine.name %> </b>
 </div>
 <div class="modal-body">
-       <%= render 'form', noedit: true %>
+       <%= render 'form' %>
 </div>
 
 <div class="modal-footer">
