--- a/app/views/vaccines/edit.html.erb
+++ b/app/views/vaccines/edit.html.erb
@@ -1,8 +1,7 @@
-<% provide(:title, 'Edit Vaccine') %>
 <% provide(:button_text, 'Save changes') %>
 
 <div class="col-sm-8 col-sm-offset-2">
-   <h3 class='display-1'>Edit Vaccine</h3>
+	<h3 class='display-1'><%= @vaccine.name %> :  Edit Vaccine</h3>
 
 <%= render 'form' %>
 
