--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -3,7 +3,7 @@
 <% active_med_count = @patient.med_count  %>
 
 <div class='spacer-20'></div>
-<div class="col-sm-8 col-sm-offset-2">
+<div class="col-sm-12 col-md-8 col-sm-offset-0 col-md-offset-2">
 <h3><%= link_to @patient.full_name, @patient %> - Current medications: <%= active_med_count>0 ? active_med_count : 'None' %></h3>
 <table class="tbl table-hover"> 
   <thead>
