--- a/app/views/patients/_medications.html.erb
+++ b/app/views/patients/_medications.html.erb
@@ -1,4 +1,4 @@
-<b><%= link_to "Medications (#{@patient.med_count})<span class='caret'></span>".html_safe, '#', remote: remote, 'data-toggle': "collapse", 'data-target': "#medications",  class: "drop-down-link" %> </b>
+<b><%= link_to "Medications (#{@patient.med_count})<span class='caret'></span>".html_safe, '#', remote: true, 'data-toggle': "collapse", 'data-target': "#medications",  class: "drop-down-link" %> </b>
    <div class="collapse panel panel-info" id="medications">
       <div class="tbl patient-dropdown-panel-body">
          <table class="tbl2 table-hover table-striped table-bordered">
@@ -6,7 +6,7 @@
             <% @patient.medications.each do |med| %> 
 	    <%= form_with model: [@patient,med] do |f| %>
             <tr>
-               <td><%= link_to "#{med.name}", patient_medication_path(@patient,med), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+               <td><%= link_to "#{med.name}", patient_medication_path(@patient,med), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
                <td> <%= med.date %> </td> 
                <td> <%= med.format %> </td> 
                <td> <%= med.route %> </td> 
