--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -2,13 +2,14 @@
 <%= render "shared/modal", size:'lg' %>
 <% remote = device_is_desktop? %>
 
-<h1><%= @patient.full_name %> :  Patient Profile </h1>
+<h1><%= @patient.full_name %> :  Patient Profile &nbsp; <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(@patient), remote: remote, 'data-toggle': "modal", 'data-target': '#modal-window' %></h1>
 
 <div class="row">
   <aside class="col-md-6">
     <section class="user_info">
 <pre class="pre-scrollable">
-<b>Name: <%= @patient.full_name %> <%= @patient.age_str %>  <%= @patient.full_sex %> <% if @patient.chart_file.present? %> <%= link_to '<i class="glyphicon glyphicon-copy"></i>'.html_safe, chart_patient_path(@patient) %> <% end %>
+<b>Name: <%= @patient.full_name %> <%= link_to '<i class="glyphicon glyphicon-credit-card"></i>'.html_safe, label_patient_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get' %>
+<%= @patient.age_str %>  <%= @patient.full_sex %> <% if @patient.chart_file.present? %> <%= link_to '<i class="glyphicon glyphicon-copy"></i>'.html_safe, chart_patient_path(@patient) %> <% end %>
 Born: <%= @patient.dob %>
 <% if @patient.pat_type == IFH_PATIENT %>
 IFH #: <%= @patient.ifh_number %> 
@@ -43,50 +44,14 @@ Medications:
 </div>
 <% end %>
 
+&nbsp; <%= render("medications", remote: remote) if @patient.medications.any? %>
+&nbsp; <%= render("prescriptions", remote: remote) if @patient.prescriptions.any? %>
 &nbsp; <%= render("invoices", remote: remote) if @patient.invoices.any? %>
 &nbsp; <%= render("letters", remote: remote) if @patient.letters.any? %>
 &nbsp; <%= render("referrals", remote: remote) if @patient.referrals.any? %>
-&nbsp; <%= render("medications", remote: remote) if @patient.medications.any? %>
 
   </section>
-
-<div class="row">
-
-<% unless @patient.pat_type == DECEASED_PATIENT %>
-  <div id="new_visit" class="col-sm-2">
-  <% if remote %>
-     <%= button_to 'New Visit', new_patient_visit_path(@patient), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window',class:"btn btn-primary btn-lg", method: 'get'  %> </td>
-  <% else %>
-     <%= button_to 'New Visit', new_patient_visit_path(@patient), class:"btn btn-primary", method: 'get' %>
-  <% end %>
-  </div>
-<% end %>
-
-  <div id="edit_pat" class="col-sm-2">
-    <%= button_to "Edit Patient", edit_patient_path(@patient), remote: remote, 'data-toggle': "modal", 'data-target': '#modal-window', class:"btn btn-danger btn-lg", method: 'get' %>
-  </div>
-
-  <div id="modLabel" class="col-sm-2">
-  <%= button_to "Label", label_patient_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  class:"btn btn-info btn-lg", method: 'get'  %>
-  </div>
-  
-  <div id="invoice" class="col-sm-2">
-    <%= button_to "Invoice", new_patient_invoice_path(@patient), class: "btn btn-warning btn-lg", method: 'get' %> 
-  </div>
-  
-  <div id="letter" class="col-sm-2">
-    <%= button_to "Letter", new_patient_letter_path(@patient), class: "btn btn-success btn-lg", method: 'get' %> 
-  </div>
-  
-  <div id="referral" class="col-sm-2">
-    <%= button_to "Referral", new_patient_referral_path(@patient), class: "btn btn-primary btn-lg active", method: 'get' %> 
-  </div>
-
-  <div id="medication" class="col-sm-2">
-    <%= button_to "+Medication", new_patient_medication_path(@patient), class: "btn btn-info btn-lg active", method: 'get' %> 
-  </div>
-</div>
-  </aside>
+</aside>
 
   <div class="col-md-6">
     <h3>Visits: (<%= @patient.visits.count %>)</h3>
@@ -107,9 +72,16 @@ Medications:
 
           </tbody>
 	</table>
-	<%= will_paginate @visits %> 
+	<div class="col-sm-9"><%= will_paginate @visits %></div>
+	<div class="col-sm-3 col-md-3" style="padding-top: 10px"> <%= button_to "Print Visit History", visit_history_patient_path(@patient),  remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-info btn-sm", method: 'get' %> </div>
     <% end %>
   </div>
+
+<div class="col-md-12" style="position: relative; bottom: 35px; top: 10px;">
+<div class="row">  
+   <%= render "buttons", remote: remote %> 
+</div>
 </div>
 
+</div>
 
