Bug fixed in drugs_controller/show
Bug fix;
News section updated
Formatting changes
Several columns in drug table dropped from view

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -63,12 +63,16 @@ table {
 
 #header {
    padding: 5px;
-   height: 50px;
+   height: 49px;
 }
 
 #body {
    padding:1px;
+   min-height: 94%; //92%;
    padding-bottom:1px;  
+//   height: 100%;
+//  margin: 0 auto -30px;  /* footer height */
+//   height: auto !important; /* Stick footer to bottom in IE6 */
 }
 
 #footer, #pushup {
